# google-sheet-analytics-mcp

./: .gitignore  .npmignore  LICENSE  README.md  README.npm.md  SETUP_GUIDE.md  app_db.sqlite  credentials.json.example  docker-compose.yml  index.js  install.sh  mcp-config.json  mcp_server.py  oauth_setup.py  package-lock.json  package.json  post-clone.sh  pyproject.toml  requirements.txt  setup.py  setup_claude_desktop.py
backend/: credentials.json.example
custom_mcp/: README.md  interface.py  logging.py  manager.py  persistence.py  relevance.py  token_management.py  versioning.py
custom_mcp/providers/: base.py  database.py  fixed_database.py  sql_examples.py
custom_mcp/sqlprompt/: README.md  __init__.py  feedback.py  sample_examples.json  similarity.py  templates.py
lib/: mcp-server.js  python-bridge.js  stdio-handler.js
scripts/: check-python.js  postinstall.js  setup-venv.js
src/: mcp_server.py
src/auth/: oauth_setup.py
